Modified the configuration of the document

--- a/index.html
+++ b/index.html
@@ -1,21 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta name="description" content="Description">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
-</head>
-<body>
-  <div id="app"></div>
-  <script>
-    window.$docsify = {
-        loadSidebar: true,
-    }
-  </script>
-  <!-- Docsify v4 -->
-  <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Document</title>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+        <meta name="description" content="Description">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+        <!-- <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/themes/dark.css"> -->
+        <!-- <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/themes/pure.css"> -->
+        <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/themes/vue.css">
+    </head>
+    <body>
+        <nav>
+            <!-- <a href="#/">中文</a> -->
+            <!-- <a href="#/en/">en</a> -->
+        </nav>
+        <div id="app"></div>
+        <script>
+            window.$docsify = {
+                            repo: 'Sxu-Online-Judge',
+                            onlyCover: true,
+                            loadSidebar: false,
+                            loadNavbar: true,
+                            coverpage: true,
+
+                            count:{
+                                            countable:true,
+                                            fontsize:'0.9em',
+                                            color:'rgb(90,90,90)',
+                                            language:'chinese'
+                                        },
+                            formatUpdated: '{MM}/{DD} {HH}:{mm}',
+                            notFoundPage: true,
+
+                            pagination: {
+                                            previousText: '上一章节',
+                                            nextText: '下一章节',
+                                            crossChapter: true,
+                                            crossChapterText: true,
+                                        },
+                        }
+        </script>
+        <!-- Docsify v4 -->
+        <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
+        <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/emoji.min.js"></script>
+        <script src="//cdn.jsdelivr.net/npm/docsify-copy-code/dist/docsify-copy-code.min.js"></script>
+        <script src="//unpkg.com/docsify-count/dist/countable.js"></script>
+        <script src="//cdn.jsdelivr.net/npm/docsify-pagination/dist/docsify-pagination.min.js"></script>
+    </body>
 </html>
